tests/sumo/pedestrian_model/nonInteracting/errors/disconnected_trip_ignore/errors.sumo
Warning: No connection between edge 'SC' and edge 'CW' found.
